fixed item_card overflow

--- a/app/src/res/sass/modules/item_card.sass
+++ b/app/src/res/sass/modules/item_card.sass
@@ -22,6 +22,7 @@
       span.body
         padding-bottom: 0.5rem
         white-space: pre-wrap
+        overflow-x: hidden
   .timesince
     position: absolute
     top: 17px
